Finialized functionality: awaiting next update

--- a/index.html
+++ b/index.html
@@ -29,6 +29,8 @@ Clicking on a task should toggle a "completed" class (e.g., strikethrough effect
 Add a delete button next to each task.
 Clicking the delete button should remove the task from the list. -->
 
+<footer>Powered by Denab IT Solutions</footer>
     <script src="todo-app.js"></script>
+    <script src="https://kit.fontawesome.com/67239c1e3d.js" crossorigin="anonymous"></script>
 </body>
 </html>
