fix: correct priority selection default option in todo list

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
         <button id="btn" >Add</button>
     <button id="resetBtn" >Reset</button>
       <select name="Prority" id="priority">
+         <option value="" disabled selected>Priority</option>
         <option value="high">High <span class="priority-dot high">🔴</span></option>
         <option value="medium">Meduim <span class="priority-dot medium">🟠</span></option>
         <option value="low">Low <span class="priority-dot low">🟢</span></option>
